--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ nav a img {
     background-image: linear-gradient( to right bottom,
     rgba(100, 100, 100, 0.8),
     rgba(100, 100, 100, 0.8)),
-    url("assets/img/dunderBuilding.jpg");
+    url("../img/dunderBuilding.jpg");
     background-size: cover;
     background-position: top;
     background-position: center;
@@ -43,9 +43,7 @@ iframe {
     margin-top: 5%;
 }
 
-#staff {
-    white-space: nowrap;
-}
+
 
 #staff img {
     width: 150px;
@@ -63,4 +61,9 @@ iframe {
 
 #staff * {
     text-align: center;
-}
+ }
+
+ /* #staff p {
+    text-transform: uppercase;
+    white-space: nowrap;
+ } */
