--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,9 +8,9 @@ nav a img {
 
 .header {
     height: 85vh;
-    background-image: linear-gradient( to right bottom,
+    background-image: linear-gradient( to right top,
     rgba(100, 100, 100, 0.8),
-    rgba(100, 100, 100, 0.8)),
+    rgba(67, 126, 245, 0.8)),
     url("../img/dunderBuilding.jpg");
     background-size: cover;
     background-position: top;
@@ -43,11 +43,13 @@ iframe {
     margin-top: 5%;
 }
 
-
+#staff {
+ 
+}
 
 #staff img {
-    width: 150px;
-    height: 225px;
+    width: 175px;
+    height: 250px;
     /* border-radius: 50%; */
     background-position: 50% 50%;
     background-repeat: no-repeat;
